<resources>
    <string name="app_name">Tracking System</string>
    <string name="home_welcome">Bienvenido a BetonDecken</string>
    <string name="home_text_init_session">Iniciar sesión</string>
    <string name="home_button_init_session">Iniciar Sesión</string>
    <string name="home_edit_hint_email">Correo Electrónico</string>
    <string name="home_edit_hint_password">Contraseña</string>
    <string name="home_button_register">Registrate aquí</string>
    <string name="home_text_no_account">¿No tienes cuenta?</string>
    <string name="home_button_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register_text_new_record">Nuevo Registro</string>
    <string name="register_edit_names">Nombres</string>
    <string name="register_edit_lastnames">Apellidos</string>
    <string name="register_edit_confirm_password">Confirmar Contraseña</string>
    <string name="register_edit_password">Contraseña</string>
    <string name="register_edit_email">Email</string>
    <string name="register_button_submit">Crear cuenta</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_tracking">Seguimiento</string>
    <string name="title_history">Historial</string>
    <string name="title_support">Soporte</string>
    <string name="button_cancel">Cancelar</string>
    <string name="tracking_listitem_delete_confirmation">Código eliminado</string>
    <string name="tracking_listitem_delete_question">¿Estás seguro de que deseas eliminar este elemento?</string>
    <string name="tracking_listitem_delete_title">Confirmar eliminación</string>
    <string name="button_delete">Eliminar</string>
    <string name="tracking_text_search_message">Buscar por código</string>
    <string name="tracking_edit_tracking_code">Código de seguimiento</string>
    <string name="button_search">Buscar</string>
    <string name="tracking_text_recent_search">Busquedas recientes</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="login_validation_enter_email_and_password">Por favor ingrese ambos, el Email y Password.</string>
    <string name="unknown_error">Error Desconocido</string>
    <string name="tracking_validation_enter_trackingcode">Codigo de Seguimiento no puede estar vacio.</string>
    <string name="trackingsingle_not_found">El código de seguimiento no se ha encontrado.</string>
</resources>