<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tracking">

    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.betondecken.trackingsystem.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_tracking" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.betondecken.trackingsystem.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.betondecken.trackingsystem.ui.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />
</navigation>