<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.tracking.TrackingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16sp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tracking_text_search_message"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtTrackingCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tracking_edit_tracking_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_search" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tracking_text_recent_search"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium" />

                <ListView
                    android:id="@+id/lstTrackingList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>